Allow user to select visible MSTs (Issue #155)

--- a/src/pages/reorder/reorder.scss
+++ b/src/pages/reorder/reorder.scss
@@ -1,3 +1,5 @@
 page-reorder {
-
+    .eye-icon {
+        float: right;
+    }
 }
